# P2P-Chat

./: .gitattributes  .gitignore  Cargo.toml  README.md  identity.key
Android-Kotlin/app/: build.gradle.kts
Android-Kotlin/app/src/main/: AndroidManifest.xml
Android-Kotlin/app/src/main/java/com/example/p2p/: ChatScreen.kt  ChatViewModel.kt  ChatViewModelFactory.kt  MainActivity.kt  NodeEvent.kt  P2pLib.kt  P2pNode.kt
Android-Kotlin/gradle/: libs.versions.toml
AndroidKotlin/: settings.gradle.kts
AndroidKotlin/app/: build.gradle.kts
AndroidKotlin/gradle/wrapper/: gradle-wrapper.properties
Rust-Core/: Cargo.toml  build-android.sh  identity.key
Rust-Core/.cargo/: config.toml
Rust-Core/src/: behaviour.rs  error.rs  node.rs  types.rs
Rust-Core/src/ffi/: android.rs  ios.rs  mod.rs
Web-React/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Web-React/src/: App.tsx
Web-WASM/: Cargo.toml  LICENSE-MIT
Web-WASM/src/: lib.rs
rust/src/: node.rs
rust/src/ffi/: android.rs
rust/src/storage/: mod.rs
src/: behaviour.rs  identity.rs  lib.rs  main.rs  node.rs  types.rs
src/crypto/: mod.rs
src/ffi/: ios.rs  mod.rs
src/storage/: mod.rs
