[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[lib]
name = "p2p"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
libp2p = { version = "0.56.0", features = [
    "tokio",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "identify",
    "tcp",
    "websocket",
    "wasm-bindgen",
    "dns",
] }
vodozemac  = "0.10.0"
aes-gcm    = "0.10.3"              # latest patch
argon2     = "0.5.3"               # latest
zeroize    = { version = "1.8.2", features = ["derive"] }
rand       = "0.10.1"              # v0.10 is the current major
postcard   = { version = "1.1.3", features = ["alloc"] }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"             # latest
log        = "0.4.27"              # latest
env_logger = "0.11.10"             # latest
futures    = "0.3.32"              # latest
thiserror  = "2.0.18"              # already latest
uuid       = { version = "1.19.0", features = ["v4", "serde"] }
anyhow     = "1.0.100"             # latest
once_cell  = "1.21.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "io-util",
    "fs",
] }
rusqlite = { version = "0.38.0", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures  = "0.4.70"
js-sys                = "0.3.81"
wasm-bindgen          = "0.2.92"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"