[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[lib]
name = "p2p"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
libp2p = { version = "0.56.0", features = [
    "tokio",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "identify",
    "tcp",
    "macros",
] }
vodozemac  = "0.10.0"
postcard   = { version = "1.1.3", features = ["alloc"] }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log        = "0.4.27"
env_logger = "0.11.10"
futures    = "0.3.32"
thiserror  = "2.0.18"
uuid       = { version = "1.19.0", features = ["v4", "serde"] }
anyhow     = "1.0.100"
zeroize = "1.8.1"
rusqlite = { version = "0.40.0", features = ["bundled"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "io-util",
    "fs",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.22.4", default-features = false }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"