[package]
name = "web-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libp2p = { version = "0.56.0", default-features = false, features = [
    "ed25519",
    "macros",
    "gossipsub",
    "identify",
    "wasm-bindgen",
] }
libp2p-webrtc-websys = "0.4.0"
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlElement", "Response"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console_log = "1.0"